<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#6A000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNamaProduk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nama_produk"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKategori"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/kategori"
        app:layout_constraintStart_toStartOf="@id/tvNamaProduk"
        app:layout_constraintTop_toBottomOf="@id/tvNamaProduk" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvNamaProduk"
        app:layout_constraintTop_toBottomOf="@id/tvKategori">

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/background_minus"
            android:text="@string/minus"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvKuantitas"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/nol"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/background_plus"
            android:text="@string/plus"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivHapusKeranjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_cancel_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHapusKeranjang" />

    <TextView
        android:id="@+id/tvHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/rp_0"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text" />


</androidx.constraintlayout.widget.ConstraintLayout>