<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailTransaksiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_toolbar3"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_transaksi"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#fff">

            <TextView
                android:id="@+id/tvIdTransaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/transaksi_0000000"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#818181"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIdTransaksi" />

            <TextView
                android:id="@+id/tvNamaToko"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/toko"
                android:textColor="#E53935"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <TextView
                android:id="@+id/tvAlamatToko"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/jalan"
                app:layout_constraintStart_toStartOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/tvNamaToko" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tanggal_transaksi"
                android:textColor="#2C2C2C"
                app:layout_constraintEnd_toEndOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/tvAlamatToko" />

            <TextView
                android:id="@+id/tvTglTransaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dd_mm_yy"
                app:layout_constraintEnd_toEndOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#6C6C6C"
                android:columnCount="5"
                android:orientation="horizontal"
                android:rowCount="1"
                app:layout_constraintEnd_toEndOf="@id/view"
                app:layout_constraintStart_toStartOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/tvTglTransaksi">

                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/no"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvProduk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvProduk"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/produk"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvKuantitas"
                    app:layout_constraintStart_toEndOf="@id/tvNo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvKuantitas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/kuantitas"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvHarga"
                    app:layout_constraintStart_toEndOf="@id/tvProduk"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvHarga"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/harga"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvTotal"
                    app:layout_constraintStart_toEndOf="@id/tvKuantitas"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/total"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvHarga"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#CACACA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/gridLayout"
                tools:listitem="@layout/item_detail_transaksi" />

            <TextView
                android:id="@+id/tvTotalTagihan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_rp_0000"
                android:textAlignment="textEnd"
                android:textColor="#000"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/rvDetail" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#818181"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTotalTagihan" />

            <TextView
                android:id="@+id/tvDiterima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/diterima_rp_0000"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@id/view2"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <TextView
                android:id="@+id/tvKembalian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/kembalian_rp_0000"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@id/view2"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toBottomOf="@id/tvDiterima" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#818181"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvKembalian" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_share_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>