<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TokoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/backgorund_toolbar_toko"
        android:padding="20dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang_di"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNamaToko"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:text="@string/nama_toko"
                android:textColor="#fff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvAlamatToko"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNamaToko"
                android:text="@string/alamat_toko"
                android:textColor="#fff" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>